--- a/templates/headlines.hbs
+++ b/templates/headlines.hbs
@@ -1,7 +1,10 @@
 <div class="row">
   <div class="col-md-6">
     <h5>Technology Thing</h5>
-    <img src="imgs/1.jpg" alt="" class="img-thumbnail" />
+    {{#link-to '1-Cords-Are-A-Health-Hazard'}}
+      <img src="imgs/1.jpg" alt="Cords are a health hazard"
+        class="img-thumbnail" />
+    {{/link-to}}
   </div>
   <div class="col-md-6">
     <h5>Fashion Thing</h5>
