Add routes and links for all three newly added templates.

--- a/templates/headlines.hbs
+++ b/templates/headlines.hbs
@@ -8,18 +8,24 @@
   </div>
   <div class="col-md-6">
     <h5>Fashion Thing</h5>
-    <img src="imgs/2.jpeg" alt="" class="img-thumbnail"/>
+    {{#link-to '2-I-Know-Nothing-About-Fashion'}}
+      <img src="imgs/2.jpeg" alt="Fashion Puzzles Me" class="img-thumbnail"/>
+    {{/link-to}}
   </div>
 </div>
 
 <div class="row">
   <div class="col-md-6">
     <h5>World News </h5>
-    <img src="imgs/3.jpg" alt="" class="img-thumbnail"/>
+    {{#link-to '3-Trouble-In-Middle-East'}}
+      <img src="imgs/3.jpg" alt="Trouble in the Middle East" class="img-thumbnail"/>
+    {{/link-to}}
   </div>
 
   <div class="col-md-6">
     <h5>Yellow Shirt People</h5>
-    <img src="imgs/4.jpeg" alt="" class="img-thumbnail"/>
+    {{#link-to '4-Yellow-Shirt-People'}}
+      <img src="imgs/4.jpeg" alt="Such Shirts" class="img-thumbnail"/>
+    {{/link-to}}
   </div>
 </div>
