--- a/templates/application.hbs
+++ b/templates/application.hbs
@@ -6,7 +6,21 @@
       <li>{{#link-to ''}}Sports{{/link-to}}</li>
       <li>{{#link-to ''}}Oddness{{/link-to}}</li>
     </ul>
+    <div class="nav navbar-nav social-links">
+      {{#if isExpanded}}
+        <li {{action 'toggleSocialMenu' on="mouseLeave"}}>
+          <ul id="social">
+            {{#link-to ''}}<img src="imgs/facebook.png" />{{/link-to}}
+            {{#link-to ''}}<img src="imgs/twitter.png" />{{/link-to}}
+            {{#link-to ''}}<img src="imgs/pinterest.png" />{{/link-to}}
+          </ul>
+        </li>
+      {{else}}
+        <li {{action 'toggleSocialMenu' on="mouseEnter"}}>
+          {{#link-to ''}}SOCIAL{{/link-to}}
+        </li>
+      {{/if}}
+    </div>
   </nav>
-
   {{outlet}}
 </div>
