update photos and styling.

--- a/templates/2-I-Know-Nothing-About-Fashion.hbs
+++ b/templates/2-I-Know-Nothing-About-Fashion.hbs
@@ -1,4 +1,4 @@
-<h1>I Know Nothing About Fashion</h1>
+<h1>Heading Heading</h1>
 <hr />
 
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
