--- a/templates/4-Yellow-Shirt-People.hbs
+++ b/templates/4-Yellow-Shirt-People.hbs
@@ -1,4 +1,4 @@
-<h1>Sweet Yellow Shirt Fad Sweeping Nation</h1>
+<h1>Heading Heading</h1>
 <hr />
 
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
