--- a/templates/headlines.hbs
+++ b/templates/headlines.hbs
@@ -7,26 +7,26 @@
   </ol>
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="imgs/dustin-pedroia.jpg" alt="First slide">
+      <img src="imgs/city.jpg" alt="First slide">
       <div class="container">
         <div class="carousel-caption">
-          <h3>2015 AL East Predictions</h3>
+          <h3>Heading Here</h3>
         </div>
       </div>
     </div>
     <div class="item">
-      <img src="imgs/food-carts.jpg" alt="Second slide">
+      <img src="imgs/sports1.jpg" alt="Second slide">
       <div class="container">
         <div class="carousel-caption">
-          <h3>Newest PDX Food Carts</h3>
+          <h3>Heading Here</h3>
         </div>
       </div>
     </div>
     <div class="item">
-      <img src="imgs/sooners.jpg" alt="Third slide">
+      <img src="imgs/nightlife.jpg" alt="Third slide">
       <div class="container">
         <div class="carousel-caption">
-          <h3>OK in Oklahoma?</h3>
+          <h3>Heading Here</h3>
         </div>
       </div>
     </div>
@@ -43,32 +43,32 @@
 
 <div class="row">
   <div class="col-md-6">
-    <h5>Technology Thing</h5>
+    <h3>Heading</h3>
     {{#link-to '1-Cords-Are-A-Health-Hazard'}}
       <img src="imgs/1.jpg" alt="Cords are a health hazard"
         class="img-thumbnail" />
     {{/link-to}}
   </div>
   <div class="col-md-6">
-    <h5>Fashion Thing</h5>
+    <h3>Heading</h3>
     {{#link-to '2-I-Know-Nothing-About-Fashion'}}
-      <img src="imgs/2.jpeg" alt="Fashion Puzzles Me" class="img-thumbnail"/>
+      <img src="imgs/2.jpg" alt="Fashion Puzzles Me" class="img-thumbnail"/>
     {{/link-to}}
   </div>
 </div>
 
 <div class="row">
   <div class="col-md-6">
-    <h5>World News </h5>
+    <h3>Heading</h3>
     {{#link-to '3-Trouble-In-Middle-East'}}
       <img src="imgs/3.jpg" alt="Trouble in the Middle East" class="img-thumbnail"/>
     {{/link-to}}
   </div>
 
   <div class="col-md-6">
-    <h5>Yellow Shirt People</h5>
+    <h3>Heading</h3>
     {{#link-to '4-Yellow-Shirt-People'}}
-      <img src="imgs/4.jpeg" alt="Such Shirts" class="img-thumbnail"/>
+      <img src="imgs/4.jpg" alt="Such Shirts" class="img-thumbnail"/>
     {{/link-to}}
   </div>
 </div>
